--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
                     В основных экспозицях музея важное место отводиться показу приоретета белоруских национальных и духовно-нравственных ценностей: государственности, патриотизма, верности воинскому долгу, чести и достоинстве, готовности защищать интересы родины.
                 </p>
                 <p>
-                    Среди наиболее ценных артефактов — стальной шлем образца 1940 года (СШ-40), который широко использовался советскими военнослужащими во время Великой Отечественной войны. Также в музее представлены экспонаты, связанные с военно-воздушными силами, которые были переданы в дар гимназии столяром Евгением Рыбаченком. Особую гордость коллекции составляет диорама «Освобождение города Минска», полностью разработанная и смоделированная учащимися гимназии с использованием современных 3D-технологий, что является ярким примером их вовлеченности в сохранение исторической памяти .
+                    Среди наиболее ценных артефактов — стальной шлем образца 1940 года (СШ-40), который широко использовался советскими военнослужащими во время Великой Отечественной войны. Также в музее представлены экспонаты, связанные с военно-воздушными силами. Особую гордость коллекции составляет диорама «Освобождение города Минска», полностью разработанная и смоделированная учащимися гимназии с использованием современных 3D-технологий, что является ярким примером их вовлеченности в сохранение исторической памяти .
                 </p>
                 
                 <div class="button-container">
@@ -178,7 +178,7 @@
                 <ul>
                     <li>Руководитель Клуба — Халипов Сергей Сергеевич, полковник запаса;</li>
                     <li>Заместитель руководителя клуба;</li>
-                    <li>Воспитанники клуба;</li>
+                    <li>Воспитанники клуба.</li>
                 </ul>
             </div>
 
@@ -194,11 +194,10 @@
                 <p>
                     Клуб регулярно участвует в городских и республиканских мероприятиях:
                     <ul>
-                        <li>Военно-спортивная игра «Зарница»;</li>
-                        <li>Республиканский лагерь «Орлёнок»;</li>
-                        <li>Акции ко Дню Победы, Дню Независимости, Дню защитника Отечества;</li>
-                        <li>Встречи с ветеранами и героями;</li>
-                        <li>Участие в парадах и торжественных линейках;</li>
+                        <li>Спортивно-патриотические конкурсы «Зарничка» «Зарница» «Орленок»;</li>
+                        <li>Патриотические акции посвященные государственным праздникам Республики Беларусь;</li>
+                        <li>Встречи с ветеранами;</li>
+                        <li>Участие в торжественных линейках и патриотических мероприятиях.</li>
                     </ul>
                 </p>
                 <p>
