--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,10 @@
             <div class="section-content">
                 <h2>Музей «Вооруженные Силы Республики Беларусь»</h2>
                 <p>
-                    Музей «Вооруженные Силы Республики Беларусь» был открыт в гимназии с целью сохранения памяти о героическом прошлом белорусского народа и воспитания патриотизма. Экспозиция, носящая название «Борьба белорусского народа с немецко-фашистскими захватчиками», размещается во втором учебном корпусе и насчитывает 117 уникальных экспонатов .
+                    Музей «Вооруженные Силы Республики Беларусь» был открыт 5 мая 2025 г. в предверии 80-летия Победы совесткого народа в Великой Отечественной войне.
+                </p>
+                <p>
+                    В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он является центром изучения героических, боевых, воинских, патриотических традиций Вооруженных Сил Республики Беларусь <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
                 </p>
                 <div class="gallery">
                     <img src="static/museum1.avif" alt="Экспонат музея 1" width="320" height="240" loading="lazy">
@@ -124,9 +127,6 @@
                     <img src="static/museum5.avif" alt="Экспонат музея 5" width="320" height="240" loading="lazy">
                     <img src="static/museum6.avif" alt="Экспонат музея 6" width="320" height="240" loading="lazy">
                 </div>
-                <p>
-                    В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он является центром узчения героических, боевых, воинских, патриотических традиций Вооруженных Сил Республики Беларусь <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
-                </p>
                 <p>
                     Стрежнем данного музея является военная история, которая обьективно отражает военные события и процессы зарождения и развития военных формирований, оперативного искусства и средств вооруженной борьбы.
                 </p>
