--- a/templates/index.html
+++ b/templates/index.html
@@ -114,10 +114,10 @@
             <div class="section-content">
                 <h2>Музей «Вооруженные Силы Республики Беларусь»</h2>
                 <p>
-                    Музей «Вооруженные Силы Республики Беларусь» был открыт 5 мая 2025 г. в предверии 80-летия Победы совесткого народа в Великой Отечественной войне.
+                    Музей «Вооруженные Силы Республики Беларусь» был открыт 5 мая 2025 г. в предверии 80-летия Победы советского народа в Великой Отечественной войне.
                 </p>
                 <p>
-                    В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также организациями-партнерами. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он является центром изучения героических, боевых, воинских, патриотических традиций Вооруженных Сил Республики Беларусь <strong>музейной педагогики</strong> для формирования у ребят национального стержня, готовности защищать Родину и беречь мир.
+                    В экспозиции представлены уникальные <strong>экспонаты</strong>, переданные сотрудниками, родителями учащихся, а также общественными организациями. Музей имеет несколько разделов, посвященных <strong>истории белорусской армии</strong>, начиная с 1918 года. Он является центром изучения героических, боевых, воинских, патриотических традиций Вооруженных Сил Республики Беларусь.
                 </p>
                 <div class="gallery">
                     <img src="static/museum1.avif" alt="Экспонат музея 1" width="320" height="240" loading="lazy">
@@ -134,7 +134,7 @@
                     В основных экспозицях музея важное место отводиться показу приоретета белоруских национальных и духовно-нравственных ценностей: государственности, патриотизма, верности воинскому долгу, чести и достоинстве, готовности защищать интересы родины.
                 </p>
                 <p>
-                    Среди наиболее ценных артефактов — стальной шлем образца 1940 года (СШ-40), который широко использовался советскими военнослужащими во время Великой Отечественной войны. Также в музее представлены экспонаты, связанные с военно-воздушными силами. Особую гордость коллекции составляет диорама «Освобождение города Минска», полностью разработанная и смоделированная учащимися гимназии с использованием современных 3D-технологий, что является ярким примером их вовлеченности в сохранение исторической памяти .
+                    Среди наиболее ценных артефактов — стальной шлем образца 1940 года (СШ-40), который широко использовался советскими военнослужащими во время Великой Отечественной войны. Также в музее представлены экспонаты, связанные с военно-воздушными силами. В рамках подготовки и проведения мероприятий по празднованию 80-й годовщины освобождения Республики Беларусь от немецко-фашистских захватчиков в музейной комнате гимназии установлена диорама «Освобождение города Минска», созданная учащимися гимназии с помощью 3D-моделирования и возможностей робототехники. Данная диорама была представлена на XXX Международном форуме по информационно-коммуникационным технологиям ТИБО-2024, а также в рамках выставки «Качественное образование: минский стандарт» городского педагогического форума, которую посетила Председатель Совета Республики, уполномоченный представитель Главы государства г.Минске Наталья Ивановна Качанова. Процесс создания диорамы «Освобождение города Минска» – это коллективная проектная деятельность группы учащихся совместно с педагогами гимназии (учителя истории, классные руководители, учитель трудового обучения, библиотекарь, руководитель по ВПВ), которая осуществлялась поэтапно: изучение исторических событий, посещение памятных мест г.Минска, разработка проекта, 3D- моделирование, создание моделей с помощью  3D-принтера, использование робототехнического оборудования. Данная проектная деятельность по созданию диорамы – это интеграция разнообразных педагогических методов с использованием современных информационных технологий, которая способствует реализации основных задач в формировании гражданина-патриота.
                 </p>
                 
                 <div class="button-container">
