--- a/templates/museum_map.html
+++ b/templates/museum_map.html
@@ -146,9 +146,9 @@
                     <div class="exhibit-item">
                         <img src="{{ url_for('static', filename='museum1.avif') }}" alt="Исторические документы" width="426" height="320" loading="lazy">
                         <div class="exhibit-info">
-                            <h3>Исторические документы</h3>
+                            <h3>Акт о безоговорочной капитуляции</h3>
                             <p>
-                                Оригинальные документы, включая приказы, письма и удостоверения личности участников Великой Отечественной войны, переданные в дар музею ветеранами Советского района.
+                                Данный экспонат был передан в фонд музея белорусским государственным деятелем, Премьер-министром Республики Беларусь в 2010-2014 г.г. Михаилом Владимировичем МЯСНИКОВИЧЕМ.                            </p>
                             </p>
                         </div>
                     </div>
