--- a/templates/museum_map.html
+++ b/templates/museum_map.html
@@ -164,9 +164,9 @@
                     </div>
 
                     <div class="exhibit-item">
-                        <img src="{{ url_for('static', filename='exhibit3.avif') }}" alt="Форма военнослужащего Белорусской армии уставная" width="426" height="320" loading="lazy">
+                        <img src="{{ url_for('static', filename='exhibit3.avif') }}" alt="Современная боевая форма одежды военнослужащего Вооруженных Сил Республики Беларусь" width="426" height="320" loading="lazy">
                         <div class="exhibit-info">
-                            <h3>Форма военнослужащего Белорусской армии</h3>
+                            <h3>Современная боевая форма одежды военнослужащего Вооруженных Сил Республики Беларусь</h3>
                             <p>
                                 Именная полевая форма одежды офицера белорусской армии нового образца. Была принята в 2020 году ввиду усовершенствования боевой формы одежды
                             </p>
