--- a/templates/museum_map.html
+++ b/templates/museum_map.html
@@ -168,7 +168,7 @@
                         <div class="exhibit-info">
                             <h3>Современная боевая форма одежды военнослужащего Вооруженных Сил Республики Беларусь</h3>
                             <p>
-                                Именная полевая форма одежды офицера белорусской армии нового образца. Была принята в 2020 году ввиду усовершенствования боевой формы одежды
+                                Боевая форма одежды военнослужащего белорусской армии нового образца.
                             </p>
                         </div>
                     </div>
