--- a/templates/index.html
+++ b/templates/index.html
@@ -94,13 +94,19 @@
                 
                 <h1>Гимназия №6 г. Минска</h1>
                 <p>
-                    Государственное учреждение образования <strong>«Гимназия №6 г. Минска»</strong> — это современное учебное заведение с богатой историей, основанное на базе общеобразовательной школы №6 в 1991 году . Строительство первого корпуса началось в 1982 году на пустыре микрорайона «Запад-3», и школа открыла свои двери для учеников в 1983 году . В 1991 году учреждение получило статус гимназии и второй учебный корпус по улице Некрасова, 24. Дальнейшее развитие привело к открытию третьего корпуса 1 сентября 2007 года, что значительно расширило образовательные и воспитательные возможности для учащихся.
+                    Древняя истина утверждает: без прошлого нет будущего. Для достойного будущего гимназии полезно обращаться к её богатой истории.                </p>
                 </p>
                 <p>
-                    Гимназия располагается в трех учебных корпусах в Советском районе столицы. Учреждение активно развивает систему <strong>идеологической и воспитательной работы</strong>. На базе гимназии существуют такие структуры, как <strong>пионерская дружина имени Зинаиды Портновой</strong>, <strong>военно-патриотический клуб «Гранит»</strong>,
-                 <strong>первичная организация ОО БРСМ ГУО «Гимназия №6 г. Минска»</strong>, <strong>первичная организация РОО «Белая Русь» ГУО «Гимназия №6 г. Минска»</strong>.</p>
+                    Политехническая гимназия была основана в 1991 году на основе школы №6, которая ранее, до 1919 года, была Русской 8-классной женской духовной гимназией. В советское время она находилась на улице Широкой и называлась «Советская трудовая школа второй ступени», обучая детей рабочих, торговцев и священников.
+                </p>
                 <p>
-                    <strong>Руководителем по военно-патриотическому воспитанию</strong> в гимназии является полковник запаса Вооруженных Сил Республики Беларусь <strong>Халипов Сергей Сергеевич</strong>. Руководитель по военно-патриотическому воспитанию является также руководителем военно-патриотического клуба «Гранит», ответственным за военно-патриотическое воспитание учащихся гимназии, а также за работу музея.
+                    Перед войной школа переехала на улицу Советскую, но в годы войны здания были разрушены. В послевоенные годы школа размещалась в здании детского сада, где ученики первых классов обучались в условиях нехватки учебных материалов. В 1948 году школа переехала на улицу Я. Коласа, где оставалась до 1977 года, развиваясь под руководством четырёх директоров.                </p>
+                </p>
+                <p>
+                    В 1977 году школа получила статус средней общеобразовательной политехнической школы и переехала на Восточную, 40. В 1979 году отмечался 60-летний юбилей, а в 1991 году ей был присвоен статус гимназии.
+                </p>
+                <p>
+                    1 сентября 2007 года открылся третий корпус гимназии, который стал уникальным учебным заведением с тремя отдельными корпусами. 20 сентября 2011 года гимназия была переименована в «Гимназию № 6 г. Минска».
                 </p>
                 <p>
                     <strong>Официальный сайт:</strong> <a href="http://gymn6.minsk.edu.by/" target="_blank">http://gymn6.minsk.edu.by/</a>
